photo changes, added favicon

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link href='http://fonts.googleapis.com/css?family=Lustria|Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/_mediaq.css">
 
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -146,7 +149,7 @@
                 <div class="border"></div>
                 <div id="list">
                     <div class="person col-md-4 uno">
-                        <img src="../img/preachers/leo.jpg" class="img-responsive" alt="">
+                        <img src="../img/leo.jpg" class="img-responsive" alt="">
                         <h5 class="center">Christian Leo</h5>
                         <a href="https://twitter.com/coffeeandbibles" target="_blank"><i class="fa fa-twitter social"></a></i>
                         <a href="http://instagram.com/coffeeandbibles?ref=badge" target="_blank"><i class="fa fa-instagram social"></i> </a>
@@ -158,7 +161,7 @@
                         <i class="fa fa-instagram social"></i> 
                     </div>
                     <div class="person col-md-4 tres">
-                        <img src="../img/preachers/obadja.jpg" class="img-responsive" alt="">
+                        <img src="../img/obadja.jpg" class="img-responsive" alt="">
                         <h5 class="center">Michael Obadja</h5>
                         <a href="https://twitter.com/mobadja" target="_blank"><i class="fa fa-twitter social"></i></a>
                         <a href="http://instagram.com/mobadja" target="_blank"><i class="fa fa-instagram social"></i></a> 
