--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <div class="border"></div>
                 <div id="list">
                     <div class="person col-md-4 uno">
-                        <img src="../img/leo.jpg" class="img-responsive" alt="">
+                        <img src="img/leo.jpg" class="img-responsive" alt="">
                         <h5 class="center">Christian Leo</h5>
                         <a href="https://twitter.com/coffeeandbibles" target="_blank"><i class="fa fa-twitter social"></a></i>
                         <a href="http://instagram.com/coffeeandbibles?ref=badge" target="_blank"><i class="fa fa-instagram social"></i> </a>
@@ -161,7 +161,7 @@
                         <i class="fa fa-instagram social"></i> 
                     </div>
                     <div class="person col-md-4 tres">
-                        <img src="../img/obadja.jpg" class="img-responsive" alt="">
+                        <img src="img/obadja.jpg" class="img-responsive" alt="">
                         <h5 class="center">Michael Obadja</h5>
                         <a href="https://twitter.com/mobadja" target="_blank"><i class="fa fa-twitter social"></i></a>
                         <a href="http://instagram.com/mobadja" target="_blank"><i class="fa fa-instagram social"></i></a> 
