--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link href='http://fonts.googleapis.com/css?family=Lustria|Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/_mediaq.css">
 
-    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
