--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link href='http://fonts.googleapis.com/css?family=Lustria|Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/_mediaq.css">
+
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -29,14 +32,14 @@
             <div id="header" data-type="background" data-speed="10">
 
                 <h6 id="abba" class="text-center">Abbalove International Ministries'</h6>
-                <img class="img-responsive logo" src="img/main-logo.png" alt="Youth Summer Camp">
+                <img class="img-responsive logo" src="/img/main-logo.png" alt="Youth Summer Camp">
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row">
             <div id="program-info" data-type="background" data-speed="10">
-                <div id="placeholder"></div>
+
                 <!-- Verse -->
                 <div class="verse-box">
                     <div class="verse">
@@ -48,12 +51,13 @@
 
                     </div>
                 </div>
+                               <div class="vimeo"><style>.embed-container { position: relative; padding-bottom: 56.25%;  width: 100%; height: auto; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src="//player.vimeo.com/video/94428377?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>                </div>
                 <!-- Descriptive Info -->
                 <div id="description" class="col-lg-12">
                     <p>
                         Abbalove International Ministries' Youth Summer Camp
                         <br>Taking place on
-                        <strong>June 27th - 29th, 2014</strong>in <a href="https://www.google.com/maps/place/RETREAT+AGAPE+CHURCH/@33.734446,-117.277961,17z/data=!3m1!4b1!4m2!3m1!1s0x80dc98d0fa06abcf:0x9cdf3e34f97367c9" target="_blank">Retreat Agape, Lake Perris, CA</a>
+                        <strong>June 27th - 29th, 2014</strong>&nbsp;in&nbsp;<a href="https://www.google.com/maps/place/RETREAT+AGAPE+CHURCH/@33.734446,-117.277961,17z/data=!3m1!4b1!4m2!3m1!1s0x80dc98d0fa06abcf:0x9cdf3e34f97367c9" target="_blank">Retreat Agape, Lake Perris, CA</a>
                         <br>Price of Admission:
                         <strong>$80</strong>
                         <span class="small">USD</span>
@@ -68,10 +72,12 @@
                     <br>
                     <p class="center">
                         Campers will learn and grow by participating in eye-opening sessions, interactional group discussions, fun activities, and uplifting worship.</p>
-                    <div class="sign-up">
-                        Register <i class="fa fa-angle-right"></i>
-                    </div>
-                    <img class="aim" src="img/aim.png" alt="aim">
+                    <a href="https://spb.io/Ek1BiiAhmP" target="blank">
+                        <div class="sign-up">
+                            Register <i class="fa fa-angle-right"></i>
+                        </div>
+                    </a>
+                    <img class="aim" src="/img/aim.png" alt="aim">
 
                 </div>
             </div>
@@ -87,6 +93,7 @@
                             <dt> <i class="fa fa-map-marker"></i> Summer Camp Address</dt>
                             <dd>Regreat Agape</dd>
                             <dd><a href="https://www.google.com/maps/place/RETREAT+AGAPE+CHURCH/@33.734446,-117.277961,17z/data=!3m1!4b1!4m2!3m1!1s0x80dc98d0fa06abcf:0x9cdf3e34f97367c9" target="_blank">21871 Richard St, Perris, CA 92570</a>
+                                <iframe width="300" height="140" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=21871%20Richard%20St%2C%20Perris%2C%20CA%2C%20United%20States&key=AIzaSyC-PmTeDrC__nQeFBoDYRqnVgtYU9zOOIA"></iframe>
                             </dd>
                         </dl>
                         <dl>
@@ -114,21 +121,26 @@
                             <dd>
                                 <div class="cta">
                                   <i class="fa fa-angle-double-right"></i>
-                                  <a href="consent_form.pdf">Consent Form</a>
+                                  <a href="consent_form.pdf" target="_blank">Consent Form</a>
                                 </div>                
                             </dd>
                         </dl>
                         <dl>
                             <dt><i class="fa fa-check-square-o"></i>Registration</dt>
-                            <dd>Pay $80 cash / credit to Mira Obadja or</dd>
+                            <dd>Pay $80 cash / credit to Abbalove International Ministries or</dd>
                             <dd><div class="cta">
                               <i class="fa fa-angle-double-right"></i>
-                              <a href="">Register Online</a>
+                              <a href="https://spb.io/Ek1BiiAhmP" target="_blank">Register Online</a>
                             </div></dd>
                             <br>
                             <dd>
                                 <em>Payments are also available in monthly installments</em>
                             </dd>
+                        </dl>
+                        <dl>
+                            <dt><i class="fa fa-tag"></i>What to Bring</dt>
+                            <dd>Bibles &amp; notes, sleeping bags (by choice, linens will be provided), towel &amp; washcloth, toiletries, personal medicine, feminine hygiene, snacks, bottles of water
+                     
                         </dl>
                     </div>
                 </div>
@@ -144,22 +156,24 @@
                 <div class="border"></div>
                 <div id="list">
                     <div class="person col-md-4 uno">
-                        <img src="http://valiocon.com/images/people/ryan2x.jpg" class="img-responsive" alt="">
+                        <img src="/img/leo.jpg" class="img-responsive" alt="">
                         <h5 class="center">Christian Leo</h5>
-                        <i class="fa fa-twitter social"></i>
-                        <i class="fa fa-instagram social"></i> 
+                        <a href="https://twitter.com/coffeeandbibles" target="_blank"><i class="fa fa-twitter social"></a></i>
+                        <a href="http://instagram.com/coffeeandbibles?ref=badge" target="_blank"><i class="fa fa-instagram social"></i> </a>
                     </div>
+                   
                     <div class="person col-md-4 dos">
-                        <img src="http://valiocon.com/images/people/sam2x.jpg" class="img-responsive" alt="">
-                        <h5 class="center">Beavis Hari</h5>
-                        <i class="fa fa-twitter social"></i>
-                        <i class="fa fa-instagram social"></i> 
-                    </div>
-                    <div class="person col-md-4 tres">
-                        <img src="http://valiocon.com/images/people/merek2x.jpg" class="img-responsive" alt="">
+                        <img src="/img/obadja.jpg" class="img-responsive" alt="">
                         <h5 class="center">Michael Obadja</h5>
-                        <i class="fa fa-twitter social"></i>
-                        <i class="fa fa-instagram social"></i> 
+                        <a href="https://twitter.com/mobadja" target="_blank"><i class="fa fa-twitter social"></i></a>
+                        <a href="http://instagram.com/mobadja" target="_blank"><i class="fa fa-instagram social"></i></a> 
+                    </div>
+
+                     <div class="person col-md-4 tres">
+                        <img src="/img/worship.JPG" class="img-responsive" alt="">
+                        <h5 class="center">Worship Band</h5>
+                        <a href="https://twitter.com/abbalovechurch" target="_blank"><i class="fa fa-twitter social"></i></a>
+                        <a href="http://instagram.com/abbaloveim" target="_blank"><i class="fa fa-instagram social"></i> </a>
                     </div>
                 </div>
             </div>
@@ -233,16 +247,24 @@
                                         <span>Session III - Egypt</span>
                                     </li>
                                     <li>
-                                        <time>7:00pm</time>
+                                        <time>6:00pm</time>
                                         <span>Dinner</span>
                                     </li>
                                     <li>
-                                      <time>8:00pm</time>
+                                      <time>7:00pm</time>
                                       <span>Worship</span>
                                     </li>
                                     <li>
-                                      <time>8:15pm</time>
+                                      <time>7:15pm</time>
                                       <span>Session IV - The Upper Room</span>
+                                    </li>
+                                    <li>
+                                        <time>9:30pm</time>
+                                        <span>Celebration</span>
+                                    </li>
+                                    <li>
+                                        <time>10:00pm</time>
+                                        <span>Bonfire</span>
                                     </li>
                                     <li>
                                       <time>11:00pm</time>
@@ -313,6 +335,16 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="js/bootstrap.min.js"></script>
         <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-50185283-1', 'aimsummercamp.org');
+          ga('send', 'pageview');
+
+        </script>
+        <script>
         $(document).ready(function() {
 
 
@@ -326,20 +358,14 @@
 
             $(document).scroll(function(e) {
 
-                if ($(window).width() < 768) {
-                    $('.verse-box').show();
-                    $('#placeholder').hide()
+                if ($(window).width() < 1024    ) {
+                    // $('.verse-box').show();
+                    // $('#placeholder').hide()
                     $('.person').css({
                         'margin-top': '20px',
                         'opacity': '1'
                     });
                 } else {
-                    // $('.verse-box').show();
-                    // $('#placeholder').hide()
-                    // $('.person').css({
-                    //   'margin-top': '20px',
-                    //   'opacity': '1'
-                    // });
                     $('.verse-box').fadeIn(3200);
                     $('#placeholder').hide();
                     if ($(window).scrollTop() + $(window).height() > $('#list').offset().top) {
@@ -351,11 +377,11 @@
                         $('.dos').animate({
                             'margin-top': '20px',
                             'opacity': '1'
-                        }, 2300);
+                        }, 2200);
                         $('.tres').animate({
                             'margin-top': '20px',
                             'opacity': '1'
-                        }, 2600);
+                        }, 2500);
                     }
                 }
 
